--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,6 +8,7 @@
     }
     section#login {
         width: 80vw;
+        height: 280px;
     }
     section#login > div#imagem {
         float: left;
@@ -28,6 +29,8 @@
 
     section#login {
         width: 950px;
+        height: 350px;
+       
     }
     section#login > div#imagem {
         float: right;
@@ -44,6 +47,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
